# cargo-daddy

./: Cargo.toml  README.md
src/: main.rs
