[package]
name = "cargo-daddy"
version = "0.1.1"
authors = ["Tymek tymek.lewandowski@gmail.com"]
license = "MIT OR Apache-2.0"
description = "cargo-daddy"
readme = "README.md"
homepage = "https://github.com/tymster/cargo-daddy"
repository = "https://github.com/tymster/cargo-daddy"
keywords = ["cli", "funny"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
